# repocred

./: .gitignore  .repocred.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SCORING.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.repocred/: badge.json
agent/: repocred.md
examples/: README.md  audit-excellent-with-evidence.txt  demo.tape  excellent.json  scorecard-empty.txt  scorecard-excellent-security-mode.txt  scorecard-excellent.txt
fixtures/excellent/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
fixtures/excellent/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
fixtures/excellent/.github/ISSUE_TEMPLATE/: bug_report.md
fixtures/excellent/.github/workflows/: ci.yml
fixtures/excellent/src/excellent/: __init__.py
fixtures/excellent/tests/: test_greet.py
repocred/: __init__.py  advice.py  analyze.py  badge.py  cli.py  config.py  context.py  jsonout.py  model.py  profile.py  render.py  rubric.py  scoring.py  templates.py
repocred/checks/: __init__.py  _util.py  badges.py  ci.py  docker.py  governance.py  license.py  metadata.py  readme.py  releases.py  security.py  structure.py  tests.py
tests/: test_calibration.py  test_scoring.py
