[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repocred"
version = "0.1.0"
description = "Auditable repository health scorecard — aligned with OpenSSF Scorecard, GitHub Community Standards and SemVer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jesús Cabrera" }]
keywords = ["repository", "health", "scorecard", "openssf", "audit", "ci", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/JesusCabreraReveles/repocred"
Repository = "https://github.com/JesusCabreraReveles/repocred"

[project.scripts]
repocred = "repocred.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["repocred"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
