[project]
name = "excellent-fixture"
version = "1.0.0"
description = "A production-grade calibration fixture."
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
